[gd_scene load_steps=24 format=3 uid="uid://d3bfrskab4h2a"]

[ext_resource type="Script" path="res://dhikra_game.gd" id="1_4ts4x"]
[ext_resource type="Script" path="res://dhikra_player.gd" id="2_u12w4"]

[sub_resource type="Environment" id="Environment_0n8xu"]
background_mode = 1
background_color = Color(0.24, 0.22, 0.2, 1)
ambient_light_source = 0
ambient_light_energy = 0.6

[sub_resource type="BoxMesh" id="BoxMesh_unit"]
size = Vector3(1, 1, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_home_floor"]
albedo_color = Color(0.46, 0.42, 0.38, 1)
roughness = 0.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_home_wall"]
albedo_color = Color(0.48, 0.52, 0.56, 1)
roughness = 0.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wood"]
albedo_color = Color(0.5, 0.35, 0.22, 1)
roughness = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sand"]
albedo_color = Color(0.82, 0.72, 0.58, 1)
roughness = 0.85

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_stone"]
albedo_color = Color(0.7, 0.67, 0.6, 1)
roughness = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_market"]
albedo_color = Color(0.6, 0.48, 0.33, 1)
roughness = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fabric"]
albedo_color = Color(0.86, 0.76, 0.62, 1)
roughness = 0.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sea"]
albedo_color = Color(0.2, 0.35, 0.5, 1)
roughness = 0.35

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_city"]
albedo_color = Color(0.55, 0.56, 0.6, 1)
roughness = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_grass"]
albedo_color = Color(0.36, 0.5, 0.32, 1)
roughness = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tree"]
albedo_color = Color(0.2, 0.3, 0.2, 1)
roughness = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dark"]
albedo_color = Color(0.18, 0.18, 0.2, 1)
roughness = 0.7

[sub_resource type="SphereMesh" id="SphereMesh_tree"]
radius = 0.6
height = 1.2

[sub_resource type="CylinderMesh" id="CylinderMesh_tree"]
top_radius = 0.12
bottom_radius = 0.16
height = 1.2
radial_segments = 12

[sub_resource type="BoxShape3D" id="BoxShape3D_box"]
size = Vector3(0.5, 0.3, 0.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(1, 1, 1)

[node name="DhikraGame" type="Node3D"]
script = ExtResource("1_4ts4x")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0n8xu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
position = Vector3(4, 6, 3)
rotation_degrees = Vector3(-45, 35, 0)
light_energy = 2.0
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
script = ExtResource("2_u12w4")
position = Vector3(0, 0, 2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_player")

[node name="Camera3D" type="Camera3D" parent="Player"]
position = Vector3(0, 1.2, 0)
fov = 70.0
current = true

[node name="RayCast3D" type="RayCast3D" parent="Player/Camera3D"]
target_position = Vector3(0, 0, -2.5)
collision_mask = 1
collide_with_areas = true

[node name="Locations" type="Node3D" parent="."]

[node name="Home" type="Node3D" parent="Locations"]
visible = true

[node name="Floor" type="MeshInstance3D" parent="Locations/Home"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_home_floor")
scale = Vector3(6, 0.1, 6)
position = Vector3(0, -0.05, 0)

[node name="FloorCollider" type="StaticBody3D" parent="Locations/Home"]
position = Vector3(0, -0.05, 0)
scale = Vector3(6, 0.1, 6)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Locations/Home/FloorCollider"]
shape = SubResource("BoxShape3D_ground")

[node name="WallBack" type="MeshInstance3D" parent="Locations/Home"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_home_wall")
scale = Vector3(6, 2.4, 0.1)
position = Vector3(0, 1.2, -3)

[node name="WallLeft" type="MeshInstance3D" parent="Locations/Home"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_home_wall")
scale = Vector3(0.1, 2.4, 6)
position = Vector3(-3, 1.2, 0)

[node name="WallRight" type="MeshInstance3D" parent="Locations/Home"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_home_wall")
scale = Vector3(0.1, 2.4, 6)
position = Vector3(3, 1.2, 0)

[node name="Shelf" type="MeshInstance3D" parent="Locations/Home"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_wood")
scale = Vector3(2.4, 1.8, 0.6)
position = Vector3(-1.3, 0.9, -1.7)

[node name="BooksRow" type="MeshInstance3D" parent="Locations/Home"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_dark")
scale = Vector3(1.8, 0.4, 0.4)
position = Vector3(-1.3, 0.5, -1.5)

[node name="BoxInteract" type="Area3D" parent="Locations/Home"]
position = Vector3(-1.2, 1.05, -1.35)
input_ray_pickable = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Locations/Home/BoxInteract"]
shape = SubResource("BoxShape3D_box")

[node name="BoxVisual" type="MeshInstance3D" parent="Locations/Home/BoxInteract"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_wood")
scale = Vector3(0.5, 0.3, 0.4)

[node name="Spawn" type="Marker3D" parent="Locations/Home"]
position = Vector3(0.2, 0, 2.2)
rotation_degrees = Vector3(0, 180, 0)

[node name="OldFort" type="Node3D" parent="Locations"]
visible = false

[node name="Ground" type="MeshInstance3D" parent="Locations/OldFort"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_sand")
scale = Vector3(12, 0.1, 12)
position = Vector3(0, -0.05, 0)

[node name="GroundCollider" type="StaticBody3D" parent="Locations/OldFort"]
position = Vector3(0, -0.05, 0)
scale = Vector3(12, 0.1, 12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Locations/OldFort/GroundCollider"]
shape = SubResource("BoxShape3D_ground")

[node name="Wall" type="MeshInstance3D" parent="Locations/OldFort"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_stone")
scale = Vector3(10, 3, 0.6)
position = Vector3(0, 1.5, -3)

[node name="TowerLeft" type="MeshInstance3D" parent="Locations/OldFort"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_stone")
scale = Vector3(1.6, 4, 1.6)
position = Vector3(-3.2, 2, -2.6)

[node name="TowerRight" type="MeshInstance3D" parent="Locations/OldFort"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_stone")
scale = Vector3(1.6, 4, 1.6)
position = Vector3(3.2, 2, -2.6)

[node name="Spawn" type="Marker3D" parent="Locations/OldFort"]
position = Vector3(0.5, 0, 2.4)
rotation_degrees = Vector3(0, 170, 0)

[node name="ShotAnchor" type="Marker3D" parent="Locations/OldFort"]
position = Vector3(0, 1.2, 2.6)

[node name="ShotTarget" type="Marker3D" parent="Locations/OldFort"]
position = Vector3(0, 1.6, -2.6)

[node name="Souk" type="Node3D" parent="Locations"]
visible = false

[node name="Ground" type="MeshInstance3D" parent="Locations/Souk"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_market")
scale = Vector3(10, 0.1, 10)
position = Vector3(0, -0.05, 0)

[node name="GroundCollider" type="StaticBody3D" parent="Locations/Souk"]
position = Vector3(0, -0.05, 0)
scale = Vector3(10, 0.1, 10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Locations/Souk/GroundCollider"]
shape = SubResource("BoxShape3D_ground")

[node name="StallLeft" type="MeshInstance3D" parent="Locations/Souk"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_wood")
scale = Vector3(2, 1, 1)
position = Vector3(-2.2, 0.5, -1)

[node name="StallRight" type="MeshInstance3D" parent="Locations/Souk"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_wood")
scale = Vector3(2, 1, 1)
position = Vector3(2.2, 0.5, -1)

[node name="Canopy" type="MeshInstance3D" parent="Locations/Souk"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_fabric")
scale = Vector3(5, 0.1, 2)
position = Vector3(0, 1.6, -1)

[node name="Spawn" type="Marker3D" parent="Locations/Souk"]
position = Vector3(-0.6, 0, 2.2)
rotation_degrees = Vector3(0, 170, 0)

[node name="ShotAnchor" type="Marker3D" parent="Locations/Souk"]
position = Vector3(-0.2, 1.2, 2.4)

[node name="ShotTarget" type="Marker3D" parent="Locations/Souk"]
position = Vector3(0, 1.2, -1.2)

[node name="Sea" type="Node3D" parent="Locations"]
visible = false

[node name="Water" type="MeshInstance3D" parent="Locations/Sea"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_sea")
scale = Vector3(12, 0.1, 12)
position = Vector3(0, -0.05, 0)

[node name="WaterCollider" type="StaticBody3D" parent="Locations/Sea"]
position = Vector3(0, -0.05, 0)
scale = Vector3(12, 0.1, 12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Locations/Sea/WaterCollider"]
shape = SubResource("BoxShape3D_ground")

[node name="Boat" type="MeshInstance3D" parent="Locations/Sea"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_wood")
scale = Vector3(1.6, 0.4, 0.6)
position = Vector3(0.4, 0.2, -1.6)

[node name="Spawn" type="Marker3D" parent="Locations/Sea"]
position = Vector3(0.2, 0, 2.2)
rotation_degrees = Vector3(0, 180, 0)

[node name="ShotAnchor" type="Marker3D" parent="Locations/Sea"]
position = Vector3(0, 1.2, 2.4)

[node name="ShotTarget" type="Marker3D" parent="Locations/Sea"]
position = Vector3(0.4, 0.4, -1.6)

[node name="Modern" type="Node3D" parent="Locations"]
visible = false

[node name="Ground" type="MeshInstance3D" parent="Locations/Modern"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_city")
scale = Vector3(12, 0.1, 12)
position = Vector3(0, -0.05, 0)

[node name="GroundCollider" type="StaticBody3D" parent="Locations/Modern"]
position = Vector3(0, -0.05, 0)
scale = Vector3(12, 0.1, 12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Locations/Modern/GroundCollider"]
shape = SubResource("BoxShape3D_ground")

[node name="Road" type="MeshInstance3D" parent="Locations/Modern"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_dark")
scale = Vector3(2.6, 0.02, 10)
position = Vector3(0, 0.02, 0.2)

[node name="TowerA" type="MeshInstance3D" parent="Locations/Modern"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_city")
scale = Vector3(1.2, 4.2, 1.2)
position = Vector3(-2.6, 2.1, -2.4)

[node name="TowerB" type="MeshInstance3D" parent="Locations/Modern"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_city")
scale = Vector3(1, 5.2, 1)
position = Vector3(0.2, 2.6, -2.8)

[node name="TowerC" type="MeshInstance3D" parent="Locations/Modern"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_city")
scale = Vector3(1.4, 3.6, 1.4)
position = Vector3(2.6, 1.8, -2.2)

[node name="Spawn" type="Marker3D" parent="Locations/Modern"]
position = Vector3(0.6, 0, 2.4)
rotation_degrees = Vector3(0, 170, 0)

[node name="ShotAnchor" type="Marker3D" parent="Locations/Modern"]
position = Vector3(0, 1.2, 2.6)

[node name="ShotTarget" type="Marker3D" parent="Locations/Modern"]
position = Vector3(0.2, 2.4, -2.6)

[node name="Final" type="Node3D" parent="Locations"]
visible = false

[node name="Ground" type="MeshInstance3D" parent="Locations/Final"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_grass")
scale = Vector3(10, 0.1, 10)
position = Vector3(0, -0.05, 0)

[node name="GroundCollider" type="StaticBody3D" parent="Locations/Final"]
position = Vector3(0, -0.05, 0)
scale = Vector3(10, 0.1, 10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Locations/Final/GroundCollider"]
shape = SubResource("BoxShape3D_ground")

[node name="Bench" type="MeshInstance3D" parent="Locations/Final"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_wood")
scale = Vector3(1.8, 0.3, 0.6)
position = Vector3(-1.2, 0.3, -1.2)

[node name="TreeTrunk" type="MeshInstance3D" parent="Locations/Final"]
mesh = SubResource("CylinderMesh_tree")
material_override = SubResource("StandardMaterial3D_wood")
position = Vector3(2.2, 0.6, -1.6)

[node name="TreeTop" type="MeshInstance3D" parent="Locations/Final"]
mesh = SubResource("SphereMesh_tree")
material_override = SubResource("StandardMaterial3D_tree")
position = Vector3(2.2, 1.8, -1.6)

[node name="FigureA" type="MeshInstance3D" parent="Locations/Final"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_dark")
scale = Vector3(0.4, 1.1, 0.3)
position = Vector3(0.2, 0.55, -1.4)

[node name="FigureB" type="MeshInstance3D" parent="Locations/Final"]
mesh = SubResource("BoxMesh_unit")
material_override = SubResource("StandardMaterial3D_dark")
scale = Vector3(0.3, 0.8, 0.25)
position = Vector3(0.8, 0.4, -1.2)

[node name="Spawn" type="Marker3D" parent="Locations/Final"]
position = Vector3(-0.2, 0, 2.2)
rotation_degrees = Vector3(0, 180, 0)

[node name="ShotAnchor" type="Marker3D" parent="Locations/Final"]
position = Vector3(0, 1.2, 2.4)

[node name="ShotTarget" type="Marker3D" parent="Locations/Final"]
position = Vector3(0.5, 0.8, -1.3)

[node name="UI" type="CanvasLayer" parent="."]

[node name="FadeRect" type="ColorRect" parent="UI"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 1)
z_index = 10

[node name="OldPhoto" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
expand_mode = 2
stretch_mode = 5
modulate = Color(1, 1, 1, 0.35)
visible = false

[node name="MemoryLabel" type="Label" parent="UI"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -140.0
offset_right = -40.0
offset_bottom = -60.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.95, 0.92, 0.86, 1)

[node name="Reticle" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
visible = true

[node name="H" type="ColorRect" parent="UI/Reticle"]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 0.0
offset_top = -1.0
offset_right = 0.0
offset_bottom = 1.0
color = Color(0.95, 0.92, 0.86, 0.8)

[node name="V" type="ColorRect" parent="UI/Reticle"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 0.0
color = Color(0.95, 0.92, 0.86, 0.8)

[node name="BookPanel" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -160.0
offset_right = 220.0
offset_bottom = 160.0
color = Color(0.95, 0.92, 0.86, 1)
visible = false
z_index = 3

[node name="BookPhoto" type="TextureRect" parent="UI/BookPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -100.0
offset_right = 160.0
offset_bottom = 100.0
expand_mode = 2
stretch_mode = 5

[node name="BoxOverlay" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
color = Color(0.92, 0.88, 0.8, 1)
visible = false

[node name="BoxPhotoA" type="ColorRect" parent="UI/BoxOverlay"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.45
anchor_bottom = 0.8
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.78, 0.72, 0.65, 1)

[node name="BoxPhotoB" type="ColorRect" parent="UI/BoxOverlay"]
anchor_left = 0.55
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.55
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.8, 0.74, 0.67, 1)

[node name="BoxPhotoC" type="ColorRect" parent="UI/BoxOverlay"]
anchor_left = 0.55
anchor_top = 0.6
anchor_right = 0.9
anchor_bottom = 0.85
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.76, 0.7, 0.63, 1)

[node name="TitleLabel" type="Label" parent="UI"]
anchor_left = 0.0
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
offset_left = 0.0
offset_top = -30.0
offset_right = 0.0
offset_bottom = 30.0
text = "Dhikra"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 64
theme_override_colors/font_color = Color(0.95, 0.92, 0.86, 1)
visible = false
z_index = 20

[node name="SubtitleLabel" type="Label" parent="UI"]
anchor_left = 0.0
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.4
offset_left = 0.0
offset_top = -20.0
offset_right = 0.0
offset_bottom = 20.0
text = "Some memories are carried forward."
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.92, 0.88, 0.82, 1)
visible = false
z_index = 20
